# cpp_properties

./: .clang-format  .cmake-format.py  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: ci.yml  linux_builds.yml  mac_builds.yml  win_builds.yml  windows_builds.yml
doc/cpp_properties/: cpp_properties.adoc  grammar.adoc  overview.adoc
doc/doxygen/: CMakeLists.txt  Doxyfile.in
example/: CMakeLists.txt  full.properties  no_newline_property.properties  simple_reader.cc  useless.properties  utils.hpp
example/detail/: file.hpp
example/include/sample/action/: properties_action.hpp
example/include/sample/encoding/: encoding.hpp
example/include/sample/io/: file.hpp
example/properties/: full.properties  no_newline_key.properties  no_newline_property.properties  useless.properties
example/properties_tree/: CMakeLists.txt  properties_tree.cc
example/properties_tree/boost/property_tree/: properties_parser.hpp
example/properties_tree/boost/property_tree/detail/: properties_parser_error.hpp  properties_parser_read.hpp
example/simple_reader/: CMakeLists.txt  simple_reader.cc
include/: lexer.hpp
src/: CMakeLists.txt
src/include/cpp_properties/: lexer.hpp  parser.hpp
src/include/cpp_properties/action/: properties_action.hpp
src/include/cpp_properties/actor/: properties_actor.hpp
src/include/cpp_properties/actor/traits/: properties_actor_traits.hpp
src/include/cpp_properties/encoding/: encoding.hpp
test/: CMakeLists.txt  test_comment.cc  test_key.cc  test_lex.cc  test_lexer.hpp  test_separator.cc  test_value.cc
test/lexer/: CMakeLists.txt  test_comment.cc  test_key.cc  test_lexer.hpp  test_separator.cc  test_value.cc
test/parser/: CMakeLists.txt  common_test_properties.hpp  test_emplace_back_properties.cc  test_emplace_front_properties.cc  test_map_properties.cc  test_map_property.cc  test_parser.hpp  test_set_properties.cc
